--- a/index.html
+++ b/index.html
@@ -1,4 +1,33 @@
-// library
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Udacit todo's goals</title>
+</head>
+<body>
+<div>
+    <h1>Todo List</h1>
+    <input id="todo" type="text" placeholder="Add todo"/>
+    <button id="todoBtn">Add todo</button>
+    <ul id="todos"></ul>
+</div>
+
+<div>
+    <h1>Goals</h1>
+    <input id="goal" type="text" placeholder="Add goal"/>
+    <button id="goalBtn">Add goal</button>
+    <ul id="goals"></ul>
+</div>
+
+    <script type="text/javascript">
+    // A function to generate a unique id
+    function generateId () {
+      return Math.random().toString(36).substring(2) + (new Date()).getTime().toString(36);
+    }
+
+//library
 function createStore (reducer) {
 
     let state;
@@ -110,37 +139,69 @@ store.subscribe(()=> {
 })
 
 
-store.dispatch(addTodoAction({
-    id: 0,
-    name: 'Walk the dog',
-    complete: false
-}));
+// store.dispatch(addTodoAction({
+//     id: 0,
+//     name: 'Walk the dog',
+//     complete: false
+// }));
 
 
-store.dispatch(addTodoAction({
-    id: 1,
-      name: 'Wash the car',
-      complete: false
-}));
+// store.dispatch(addTodoAction({
+//     id: 1,
+//       name: 'Wash the car',
+//       complete: false
+// }));
 
-store.dispatch(addTodoAction({
-    id: 2,
-    name: 'Go to the gym',
-    complete: true
-}));
+// store.dispatch(addTodoAction({
+//     id: 2,
+//     name: 'Go to the gym',
+//     complete: true
+// }));
 
-store.dispatch(removeTodoAction(1));
+// store.dispatch(removeTodoAction(1));
   
-store.dispatch(toggleTodoAction(0));
+// store.dispatch(toggleTodoAction(0));
 
-store.dispatch(addGoalsAction( {
-    id: 0,
-    name: 'Learn Redux'
-  }))
+// store.dispatch(addGoalsAction( {
+//     id: 0,
+//     name: 'Learn Redux'
+//   }))
    
-store.dispatch(addGoalsAction({
-    id: 1,
-    name: 'Lose 20 pounds'
-  }))
+// store.dispatch(addGoalsAction({
+//     id: 1,
+//     name: 'Lose 20 pounds'
+//   }))
   
-store.dispatch(removeGoalAction(0))
+// store.dispatch(removeGoalAction(0))
+
+function addTodo(){
+const input = document.getElementById('todo');
+const name = input.value
+input.value = ''
+
+store.dispatch(addTodoAction({
+    name,
+    complete: false,
+    id: generateId()
+}))
+}
+function addGoal(){
+    const input = document.getElementById('goal');
+const name = input.value
+input.value = ''
+
+store.dispatch(addGoalsAction({
+    name,
+    id: generateId()
+}))
+}
+
+document.getElementById('todoBtn')
+.addEventListener('click', addTodo)
+
+document.getElementById('goalBtn')
+.addEventListener('click', addGoal)
+    </script>
+    
+</body>
+</html>
