SUBJECT: Implement striking through complete goal and adding a button to remove goals and todos

--- a/index.html
+++ b/index.html
@@ -135,45 +135,17 @@ return {
 
 const store = createStore(app)
 store.subscribe(()=> {
-    console.log("The new state is: ", store.getState());
+const { goals, todos } = store.getState()
+
+document.getElementById('goals').innerHTML = ''
+document.getElementById('todos').innerHTML = ''
+
+goals.forEach(addgoalToDOM)
+todos.forEach(addTodoToDOM)
 })
 
 
-// store.dispatch(addTodoAction({
-//     id: 0,
-//     name: 'Walk the dog',
-//     complete: false
-// }));
-
-
-// store.dispatch(addTodoAction({
-//     id: 1,
-//       name: 'Wash the car',
-//       complete: false
-// }));
-
-// store.dispatch(addTodoAction({
-//     id: 2,
-//     name: 'Go to the gym',
-//     complete: true
-// }));
-
-// store.dispatch(removeTodoAction(1));
-  
-// store.dispatch(toggleTodoAction(0));
-
-// store.dispatch(addGoalsAction( {
-//     id: 0,
-//     name: 'Learn Redux'
-//   }))
-   
-// store.dispatch(addGoalsAction({
-//     id: 1,
-//     name: 'Lose 20 pounds'
-//   }))
-  
-// store.dispatch(removeGoalAction(0))
-
+// DOM code
 function addTodo(){
 const input = document.getElementById('todo');
 const name = input.value
@@ -201,6 +173,47 @@ document.getElementById('todoBtn')
 
 document.getElementById('goalBtn')
 .addEventListener('click', addGoal)
+
+
+const createRemoveButton = (onClick) => {
+    const removeBtn = document.createElement('button');
+    removeBtn.innerHTML = 'X'
+    removeBtn.addEventListener('click', onClick)
+    return removeBtn
+}
+
+
+function addTodoToDOM (todo) {
+const node = document.createElement('li');
+const text = document.createTextNode(todo.name);
+
+const removeBtn = createRemoveButton(()=> {
+    store.dispatch(removeTodoAction(todo.id))
+})
+node.appendChild(text);
+node.appendChild(removeBtn)
+node.style.textDecoration = todo.complete ? 'line-through' : 'none'
+node.addEventListener('click', () => {
+    store.dispatch(toggleTodoAction(todo.id))
+})
+
+document.getElementById('todos')
+.appendChild(node)
+}
+
+function addgoalToDOM (goal) {
+const node = document.createElement('li');
+const text = document.createTextNode(goal.name);
+const removeBtn = createRemoveButton(()=> {
+    store.dispatch(removeGoalAction(goal.id))
+})
+
+node.appendChild(text);
+node.appendChild(removeBtn)
+// console.log(text);
+document.getElementById('goals')
+.appendChild(node)
+}
     </script>
     
 </body>
