--- a/index.html
+++ b/index.html
@@ -101,11 +101,46 @@ switch(action.type){
 }
 
 
+// Real redux middleware
+const checker = (store) => (next) => (action) => {
+        {
+            if(
+            action.type === ADD_TODO && 
+            action.todo.name.toLowerCase().includes('bitcoin')
+            ){
+            return alert("Nope. That's a bad idea.")
+            }
+
+            if(
+                action.type === ADD_GOAL && 
+                action.goal.name.toLowerCase().includes('bitcoin')
+            ){
+            return alert("Nope. That's a bad idea.")
+            }
+            // Next is used when there is more than one middleware in line
+            return next(action)
+        }
+
+        }
+
+// The logger middleware which displays the action and the new state on the console
+const logger = (store) => (next) => (action) => {
+    console.group(action.type)
+    console.log('The action: ', action)
+    // note that next here performs the work of dispatch, so it dispatches the action
+    const result = next(action)
+    console.log('The new state: ', store.getState());
+    console.groupEnd()
+    return result 
+}
+
+
+
 // We make use of our redux library in place of our written library
 const store = Redux.createStore(Redux.combineReducers({
     todos,
     goals
-}))
+}), Redux.applyMiddleware(checker, logger))
 store.subscribe(()=> {
 const { goals, todos } = store.getState()
 
