Import React via CDN and add Todos, Goald, and List components

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Udacit todo's goals</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.7.2/redux.min.js"></script>
+    <script src="https://unpkg.com/react@16.3.0-alpha.1/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@16.3.0-alpha.1/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
 </head>
 <body>
 <div>
@@ -22,6 +25,9 @@
     <ul id="goals"></ul>
 </div>
 
+<hr/>
+
+ <div id="app"></div>
     <script type="text/javascript">
     // A function to generate a unique id
     function generateId () {
@@ -223,5 +229,54 @@ document.getElementById('goals')
 }
     </script>
     
+    <script type='text/babel'>
+    function List (props) {
+        return (
+            <ul>
+            <li>LIST</li>
+            </ul>
+        )
+    }
+
+    class Todos extends React.Component {
+        render() {
+            return (
+                <div>
+                    TODOS
+                    <List/>
+                </div>
+            );
+        }
+    }
+
+    class Goals extends React.Component {
+        render() {
+            return (
+                <div>
+                    GOALS
+
+                    <List/>
+                </div>
+            );
+        }
+    }
+
+
+    class App extends React.Component {
+        render() {
+            return (
+                <div>
+                    <Todos/>
+                    <Goals/>
+                </div>
+            );
+        }
+    }
+
+    ReactDOM.render(
+        <App/>,
+        document.getElementById('app')
+    )
+    </script>
 </body>
 </html>
