SUBJECT: Convert the whole application to use redux. BODY: add the removeItem and ToggleItem functions to the react app

--- a/index.html
+++ b/index.html
@@ -229,33 +229,94 @@ document.getElementById('goals')
 }
     </script>
     
+
+    <!-- REACT -->
     <script type='text/babel'>
     function List (props) {
         return (
             <ul>
-            <li>LIST</li>
+            {
+                props.items.map(item=> (
+                    <li key={item.id}>
+                    <span 
+                    onClick={() => props.toggle && props.toggle(item.id)}
+                    style={{textDecoration: item.complete ? 'line-through' : 'none'}}>
+                    {item.name}    
+                    </span>  
+                    <button onClick={() => props.remove(item)}>
+                     X    
+                    </button>  
+                    </li>
+                ))
+            }
             </ul>
         )
     }
 
     class Todos extends React.Component {
+        addItem = (e) => {
+            e.preventDefault()
+            const name = this.input.value
+            this.input.value = ''
+
+            this.props.store.dispatch(addTodoAction({
+            name,
+            complete: false,
+            id: generateId()
+        }))
+        }
+    removeItem = (todo) => {
+        this.props.store.dispatch(removeTodoAction(todo.id))
+    }
+    toggleItem = (id) => {
+        this.props.store.dispatch(toggleTodoAction(id))
+    }
         render() {
             return (
                 <div>
-                    TODOS
-                    <List/>
+                    <h1>Todo List</h1>
+                    <input 
+                    type="text"
+                    placeholder="Add Todo"
+                    ref={(input)=> this.input = input}/>
+                    <button onClick={this.addItem}>Add Todo</button>
+                    <List 
+                    items={this.props.todos}
+                    remove={this.removeItem}
+                    toggle={this.toggleItem}/>
                 </div>
             );
         }
     }
 
     class Goals extends React.Component {
+        addGoal = (e) => {
+            e.preventDefault()
+            const name = this.input.value
+            this.input.value = ''
+
+            this.props.store.dispatch(addGoalsAction({
+            name,
+            id: generateId()
+        }))
+        }
+
+        removeItem = (goal) => {
+        this.props.store.dispatch(removeGoalAction(goal.id))
+    }
         render() {
             return (
                 <div>
-                    GOALS
-
-                    <List/>
+                    <h1>Goals</h1>
+                    <input 
+                    type="text"
+                    placeholder="Add Goal"
+                    ref={(input)=> this.input = input}/>
+                    <button onClick={this.addGoal}>Add Goal</button>
+                    <List 
+                    items={this.props.goals}
+                    remove={this.removeItem}
+                    />
                 </div>
             );
         }
@@ -263,18 +324,26 @@ document.getElementById('goals')
 
 
     class App extends React.Component {
+        componentDidMount(){
+            const { store } = this.props
+
+            store.subscribe(()=> this.forceUpdate())
+        }
+
         render() {
+            const {store} = this.props
+            const { todos, goals } = store.getState()
             return (
                 <div>
-                    <Todos/>
-                    <Goals/>
+                    <Todos todos={todos} store={this.props.store}/>
+                    <Goals goals={goals} store={this.props.store}/>
                 </div>
             );
         }
     }
 
     ReactDOM.render(
-        <App/>,
+        <App store={store}/>,
         document.getElementById('app')
     )
     </script>
